--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,7 @@
+@import 'variables';
 @import 'lab' ;
+
+
 
 * {
     box-sizing: border-box;
@@ -8,4 +11,5 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
+    
 }
