--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'lab' ;
+@import 'add';
 
 
 
@@ -7,9 +8,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
 }
 
 body {
     font-family: 'Ubuntu', sans-serif;
+    background-color: black;
     
 }
