--- a/src/styles/_lab.scss
+++ b/src/styles/_lab.scss
@@ -6,6 +6,7 @@
     .labList {
         grid-column: 1;
         font-size: 100%;
+        color: white;
         .listFlex {
             padding: 3px;
             border-bottom: solid 0.3px;
