--- a/src/styles/_add.scss
+++ b/src/styles/_add.scss
@@ -4,6 +4,7 @@
     max-width: 800px;
     height: 100%;
     .addHeader {
+       
         min-height: 60px;
         max-height: 60px;
         background-color: $secondaryColor;
@@ -11,16 +12,39 @@
         display: flex;
         align-items: center;
         /* justify-content: center;*/
+       
         .material-icons {
+            grid-column: 2;
             padding-left: 10px;
             padding-right: 10px;
             color: $primaryColor;
+            user-select: none;
+            cursor: pointer;
         }
     }
     .addAdded {
+        color:white;
+        padding: 10px;
+        border: $primaryColor solid;
+        margin: 10px;
+        border-width: 0.05px;
+        border-radius: 10px;
+        .cancionesAdded {
+            padding: 5px;
+            small {
+                color: gray;
+            }
+        }
+        .botonLimpiar {
+            color: yellow;
+            cursor: pointer;
+            user-select: none;
+            margin-top: 15px;
+        }
     }
     .allSongs {
         color: white;
+        padding: 10px;
         .blockList {
             display: grid;
             grid-template-columns: 1fr 0.1fr;
@@ -29,12 +53,16 @@
             min-height: 40px;
             border-bottom: solid gray 1px;
             min-width: 100px;
+            small {
+                color: gray;
+            }
            
 
         }
         .material-icons {
             color: $primaryColor;
             cursor: pointer;
+            user-select: none;
         }
     }
 }
