--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -5,9 +5,27 @@
         min-height: 60px;
         background-color: $secondaryColor;
         padding-left: 10px;
+        border-bottom: solid $primaryColor 1px;
         
         img {
             margin-top: 10px;
+        }
+    }
+    .domHome {
+        color: white;
+        padding: 10px;
+        .link {
+            text-decoration: none;
+
+            .filaSong {
+                color: white;
+                cursor: pointer;
+                padding: 10px;
+                border-bottom: gray solid 1px;
+                small {
+                    color: gray;
+                }
+            }
         }
     }
 }
