--- a/src/styles/_lab.scss
+++ b/src/styles/_lab.scss
@@ -43,6 +43,13 @@
                 background-color: black;
                 color: white;
             }
+            
+            .chord {
+                color: $primaryColor;
+                
+            }
+
+            
         }
     }
     .labEdit {
