--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import 'lab' ;
 @import 'add';
 @import 'home';
+@import 'content';
 
 
 
@@ -15,5 +16,6 @@
 body {
     font-family: 'Ubuntu', sans-serif;
     background-color: black;
+    
     
 }
