--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,6 +1,9 @@
 .contentAll {
     max-width: 800px;
     margin: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 70px 100% 50px;
     .contentHeader {
         position: sticky;
         top: 0;
@@ -17,14 +20,11 @@
             justify-content: flex-start;
             align-items: center;
             color: $primaryColor;
+            padding-left: 15px;
             div {
                 user-select: none;
             }
-            .material-icons {
-                color: $primaryColor;
-                margin: 10px;
-                cursor: pointer;
-            }
+
             small {
                 color: gray;
             }
@@ -34,20 +34,15 @@
         }
     }
     .contentArea {
-        
-        
-        
-        margin-bottom: 50px;
         color: white;
         padding: 20px;
-        
+
         .contentLetra {
             pre {
                 font-family: "Ubuntu", sans-serif;
             }
         }
         .contentAcordes {
-            
             pre {
                 font-family: "Ubuntu", sans-serif;
                 .chord {
@@ -66,15 +61,41 @@
         min-height: 50px;
         max-height: 50px;
         position: fixed;
-        
-
         bottom: 0;
+
         display: flex;
         justify-content: space-around;
         align-items: center;
         .material-icons {
             color: $primaryColor;
-            
+        }
+    }
+}
+
+@media all and (orientation: portrait) {
+}
+
+@media all and (orientation: landscape) {
+    .contentAll {
+        display: grid;
+        grid-template-columns: 100% 50px;
+        .contentHeader {
+            display: none;
+        }
+        .contentArea {
+        }
+        .blockButtons {
+            position: fixed;
+            height: calc(100vh);
+            width: 50px;
+            right: 0;
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-around;
+            min-height: none;
+            max-height: none;
+            border-top: none;
+            border-left: solid 1px gray;
         }
     }
 }
