--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,7 +1,10 @@
 .homePage {
     max-width: 800px;
     margin: auto;
+    display: grid;
     .homeHeader {
+        position: sticky;
+        top: 0;
         min-height: 60px;
         background-color: $secondaryColor;
         padding-left: 10px;
@@ -12,6 +15,7 @@
         }
     }
     .domHome {
+        margin-top: 10px;
         color: white;
         padding: 10px;
         .link {
@@ -27,5 +31,39 @@
                 }
             }
         }
+    }
+    .youtubeArea {
+        cursor: pointer;
+        user-select: none;
+        text-decoration: none;
+        margin-top: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        margin-bottom: 60px;
+        .material-icons {
+            color: red;
+            margin-right: 10px;
+        }
+        
+
+    }
+    .footerHome {
+        background-color: black;
+        height: 50px;
+        color: $primaryColor;
+        position: fixed;
+        bottom: 0;
+        border-top: $primaryColor solid 1px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        max-width: 800px;
+        .material-icons {
+            color: $primaryColor;
+        }
+
     }
 }
