--- a/src/styles/_lab.scss
+++ b/src/styles/_lab.scss
@@ -1,6 +1,6 @@
 .labBody {
     display: grid;
-    grid-template-columns: 0.8fr 1fr 1fr;
+    grid-template-columns: 20% 40% 40%;
     background-color: secondaryColor;
 
     .labList {
