--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -2,8 +2,7 @@
     max-width: 800px;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 70px 100% 50px;
+    
     .contentHeader {
         position: sticky;
         top: 0;
@@ -36,6 +35,7 @@
     .contentArea {
         color: white;
         padding: 20px;
+        margin-bottom: 50px;
 
         .contentLetra {
             pre {
