--- a/src/styles/_lib.scss
+++ b/src/styles/_lib.scss
@@ -5,18 +5,35 @@
         position: sticky;
         top: 0;
         display: flex;
-        justify-content: left;
+        justify-content: space-between;
         align-items: center;
         position: sticky;
         height: 50px;
         border-bottom: $primaryColor 1px solid;
+
+        
+
         .material-icons {
             color: $primaryColor;
             margin-left: 10px;
         }
-        div {
-            margin-left: 10px;
+        
+        input {
+            text-decoration: none;
+            width: 90%;
+            background-color: black;
             color: white;
+            border: white solid 1px;
+            border-radius: 5px;
+            margin-left: 15px;
+            margin-right: 15px; 
+            height: 25px;
+                
+        }
+        input::placeholder {
+            color: gray;
+
+            
         }
     }
     .libArea {
