--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -4,8 +4,8 @@
     display: grid;
     
     .contentHeader {
-        position: sticky;
-        top: 0;
+        /*position: sticky;
+        top: 0;*/
         min-height: 72px;
         background-color: $secondaryColor;
         display: flex;
